RESOLVED FIXED195598
REGRESSION(r236281): YouTube Movies fail with "video format" error
https://bugs.webkit.org/show_bug.cgi?id=195598
Summary REGRESSION(r236281): YouTube Movies fail with "video format" error
Jer Noble
Reported 2019-03-11 20:01:39 PDT
REGRESSION(r236281): YouTube Movies fail with "video format" error
Attachments
Patch (1.39 KB, patch)
2019-03-11 20:06 PDT, Jer Noble
no flags
Patch (1.39 KB, patch)
2019-03-12 12:01 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2019-03-11 20:02:33 PDT
Jer Noble
Comment 2 2019-03-11 20:06:37 PDT
WebKit Commit Bot
Comment 3 2019-03-11 20:49:49 PDT
Comment on attachment 364340 [details] Patch Clearing flags on attachment: 364340 Committed r242770: <https://trac.webkit.org/changeset/242770>
WebKit Commit Bot
Comment 4 2019-03-11 20:49:51 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 5 2019-03-12 12:01:25 PDT
Reopening to attach new patch.
Jer Noble
Comment 6 2019-03-12 12:01:26 PDT
Jer Noble
Comment 7 2019-03-12 14:24:26 PDT
Note You need to log in before you can comment on or make changes to this bug.