REGRESSION(r236281): YouTube Movies fail with "video format" error https://bugs.webkit.org/show_bug.cgi?id=195598 <rdar://problem/48782842>

Reviewed by Jon Lee.

Partially revert r236281 for YouTube.com.

* page/Quirks.cpp:
(WebCore::Quirks::hasBrokenEncryptedMediaAPISupportQuirk const):


Canonical link: https://commits.webkit.org/209900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242770 268f45cc-cd09-0410-ab3c-d52691b4dbfc